--- a/01-tolerations.yaml
+++ b/01-tolerations.yaml
@@ -11,5 +11,5 @@ spec:
   containers:
   - name: nginx
     image: nginx:stable-perl 
-  nodeSelector:
-    hardware: gpu 
+  # nodeSelector:
+  #   disktype: ssd 
