--- a/04-pod-affinity.yaml
+++ b/04-pod-affinity.yaml
@@ -6,3 +6,22 @@ spec:
   containers:
   - name: nginx
     image: nginx:stable-perl 
+---
+apiVersion: v1
+kind: Pod 
+metadata:
+  name: pod-2
+spec:
+  affinity:
+    podAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+      - labelSelector:
+          matchExpressions:
+          - key: name
+            operator: In
+            values:
+            - pod-1 
+        topologyKey: topology.kubernetes.io/zone
+  containers:
+  - name: nginx
+    image: nginx:stable-perl 
