--- a/04-pod-affinity.yaml
+++ b/04-pod-affinity.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod 
 metadata:
   name: pod-1
+  purpose: affinity 
 spec:
   containers:
   - name: nginx
@@ -17,10 +18,10 @@ spec:
       requiredDuringSchedulingIgnoredDuringExecution:
       - labelSelector:
           matchExpressions:
-          - key: name
+          - key: purpose
             operator: In
             values:
-            - pod-1 
+            - affinity 
         topologyKey: topology.kubernetes.io/zone
   containers:
   - name: nginx
