--- a/04-pod-affinity.yaml
+++ b/04-pod-affinity.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: Pod 
 metadata:
   name: pod-1
-  purpose: affinity 
+  labels:
+    purpose: affinity 
 spec:
   containers:
   - name: nginx
