--- a/04-pod-affinity.yaml
+++ b/04-pod-affinity.yaml
@@ -27,3 +27,22 @@ spec:
   containers:
   - name: nginx
     image: nginx:stable-perl 
+--- 
+apiVersion: v1
+kind: Pod 
+metadata:
+  name: pod-3
+spec:
+  affinity:
+    podAntiAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        - labelSelector:
+            matchExpressions:
+             - key: purpose
+               operator: In
+               values:
+                - affinity
+          topologyKey: topology.kubernetes.io/zone 
+  containers:
+  - name: nginx
+    image: nginx:stable-perl 
